--- a/index.html
+++ b/index.html
@@ -9,39 +9,44 @@
 <body>
     <div class="container">
         <div id="info-card">
-            <h1>User Information Card</h1>
-            <div id="user-info">
-                <div class="field">
-                    <span class="label">First Name:</span>
-                    <span id="first-name"></span>
-                </div>
-                <div class="field">
-                    <span class="label">Last Name:</span>
-                    <span id="last-name"></span>
-                </div>
-                <div class="field">
-                    <span class="label">Country:</span>
-                    <span id="country"></span>
-                </div>
-                <div class="field">
-                    <span class="label">Phone Number:</span>
-                    <span id="phone-number"></span>
-                </div>
-                <div class="field">
-                    <span class="label">State:</span>
-                    <span id="state"></span>
-                </div>
-                <div class="field">
-                    <span class="label">City:</span>
-                    <span id="city"></span>
-                </div>
-                <div class="field">
-                    <span class="label">Village:</span>
-                    <span id="village"></span>
-                </div>
+          <h1>User Information Card</h1>
+          <div id="user-info">
+            <div class="field">
+              <span class="label">First Name:</span>
+              <span id="first-name"></span>
             </div>
+            <div class="field">
+              <span class="label">Last Name:</span>
+              <span id="last-name"></span>
+            </div>
+            <div class="field">
+              <span class="label">Country:</span>
+              <span id="country"></span>
+            </div>
+            <div class="field">
+              <span class="label">Phone Number:</span>
+              <span id="phone-number"></span>
+            </div>
+            <div class="field">
+              <span class="label">State:</span>
+              <span id="state"></span>
+            </div>
+            <div class="field">
+              <span class="label">City:</span>
+              <span id="city"></span>
+            </div>
+            <div class="field">
+              <span class="label">Village:</span>
+              <span id="village"></span>
+            </div>
+          </div>
         </div>
-    </div>
+        <select id="theme-selector">
+          <option value="light">Light Theme</option>
+          <option value="dark">Dark Theme</option>
+          <option value="blue">Blue Theme</option>
+        </select>
+      </div>                     
 
     <script src="./script.js"></script>
 </body>
